# deemian-prototype

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb
src/deemian/: __init__.py  console.py
src/deemian/engine/: cfg.py  grammar.lark  model.py  processor.py
tests/: conftest.py  test_console.py  test_deemian.py  test_engine_cfg.py  test_engine_model.py  test_engine_processor.py
tests/data/: simple-nonpolar.yaml
