[tool.poetry]
name = "deemian"
version = "0.1.0"
description = "A Domain Specific Language for Deep Molecular Interaction Analysis"
authors = ["Muhammad Radifar"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
