[tool.poetry]
name = "deemian"
version = "0.1.0"
description = "A Domain Specific Language for Deep Molecular Interaction Analysis"
authors = ["Muhammad Radifar"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
rich = "^13.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
