[tool.poetry]
name = "deemian"
version = "0.1.0"
description = "A Domain Specific Language for Deep Molecular Interaction Analysis"
authors = ["Muhammad Radifar"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.scripts]
deemian = 'deemian.console:main'

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pydantic = "^1.10.7"
lark = "^1.1.5"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
rich = "^13.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
